# CrumbsEngine

./: CMakeLists.txt  README.md  main.cpp  todo.md
include/engine_layer/: debug.hpp  mesh.hpp  primitive_meshes.hpp
include/vulkan_layer/: mesh_draw_info.hpp  scene_ubo.hpp  ubo.hpp  vertex.hpp  vulkan_buffer.hpp  vulkan_command_buffers.hpp  vulkan_descriptor.hpp  vulkan_device.hpp  vulkan_framebuffers.hpp  vulkan_instance.hpp  vulkan_pipeline.hpp  vulkan_render_pass.hpp  vulkan_renderer.hpp  vulkan_shadow_view.hpp  vulkan_swapchain.hpp  vulkan_sync_objects.hpp  vulkan_ub_descriptor.hpp  vulkan_wrappers.hpp
src/: main.cpp
src/shaders/: test.frag.glsl  test.vert.glsl  testshadow.vert.glsl
